NPOTDB support validating xsd:double. Bug 331897, patch by sspeiche, r=doronr+allan